Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21037

mariabackup does not detect multi-source replication slave

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.3.20
    • Backup, mariabackup
    • None

    Description

      I am running multi-source slave and trying to backup database with mariabackup.
      mariabackup --compress --open-files-limit=9046 --slave-info --safe-slave-backup --safe-slave-backup-timeout=500 --backup --target-dir /backup/mysqld1/2019-11-12

      But mariabackup does not detect multi-source slave configuration ( i don't have default_master_connection configured, only named connections)

      [00] 2019-11-12 12:02:48 Failed to get master binlog coordinates from SHOW SLAVE STATUS.This means that the server is not a replication slave. Ignoring the --slave-info option

      [00] 2019-11-12 12:02:48 Compressing xtrabackup_binlog_info
      [00] 2019-11-12 12:02:48 ...done
      [00] 2019-11-12 12:02:48 Executing FLUSH NO_WRITE_TO_BINLOG ENGINE LOGS...
      [00] 2019-11-12 12:02:48 mariabackup: The latest check point (for incremental): '587720589969'
      mariabackup: Stopping log copying thread.[00] 2019-11-12 12:02:48 >> log scanned up to (587723317367)

      [00] 2019-11-12 12:02:48 >> log scanned up to (587723317367)
      [00] 2019-11-12 12:02:48 Executing UNLOCK TABLES
      [00] 2019-11-12 12:02:48 All tables unlocked

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              greenny380 Igor
              Votes:
              1 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 6.5d
                  6.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.