MDEV-21037 assert cache_mngr->trx_cache.empty() in binlog_close_connection

was caused by missed proper cleanup of connection`s  binlog state under
union of conditions: user LOCK on table with trigger + MSTA + SAVEPOINT.

The issue is fixed with refined decision to reset
THD::binlog_table_maps at statement end is true regardless of the
status of `pending` event in binlog cache.